// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package license;

option go_package = "sge-monorepo/tools/vendor_bender/protos/licensepb";

message LicenseDatabase {
    // list of licenses
    repeated License licenses = 1;
}

message License {
  // type of license
  string type = 1;

  // name of license.
  string name = 2;

  // distinguable phrases of license
  repeated string key_phrases = 3;
}
